# CLAIR_grid

./: .gitignore  main.py  requirements.txt  setup.cfg
backups/: evaluate.py
clair_grid/: evaluation.py  gym_utils.py  utils.py
clair_grid/agents/: agent.py  sg_agent.py  sg_random_agent.py
clair_grid/coordination/: coordinator.py  sg_coordinator.py
clair_grid/environment/: citylearn_wrapper.py  env_wrapper.py
