[metadata]
name = clair_grid
version = 0.0.0
author = Sarah Keren
author_email = sarahk@technion.ac.il
description = Final project for CLAI course 2023 - Technion CS
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CLAIR-LAB-TECHNION/CLAIR_grid
keywords = AI, RL, planning, environment, multi-agent
classifiers =
    'License :: OSI Approved :: MIT License'
    'Programming Language :: Python :: 3'
    'Programming Language :: Python :: Implementation :: CPython'
    'Programming Language :: Python :: Implementation :: PyPy'

[options]
packages = find:
python_requires = >=3.7
install_requires = file: requirements.txt


